# streamlit-annotation-tools

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
alfred/: build.py  clean.py  deploy.py  install.py  run.py  version.py
examples/: example.py  requirements.txt
libs/st_annotation/: __init__.py
libs/st_annotation/frontend/: package.json
libs/st_annotation/frontend/src/: Annotation.tsx  index.tsx
src/st_text_annotator/: __init__.py
src/st_text_annotator/frontend/: package.json
src/st_text_annotator/frontend/public/: index.html
src/st_text_annotator/frontend/src/: Annotation.tsx  index.tsx  types.ts
src/st_text_annotator/frontend/src/components/: Annotation.tsx
src/st_text_annotator/frontend/src/helpers/: annotationHelpers.ts
src/st_text_annotator/frontend/src/reducers/: annotationReducer.tsx
src/st_text_annotator/frontend/src/utils/: StreamlitProvider.tsx
src/streamlit_annotation_tools/: __init__.py
src/streamlit_annotation_tools/frontend/: package.json  tailwind.config.js
src/streamlit_annotation_tools/frontend/public/: index.html
src/streamlit_annotation_tools/frontend/src/: index.tsx
src/streamlit_annotation_tools/frontend/src/components/: Builder.tsx  Highlighter.tsx  Labeler.tsx
src/streamlit_annotation_tools/frontend/src/helpers/: highlightHelpers.ts  labelerHelpers.ts
src/streamlit_annotation_tools/frontend/src/reducers/: highlightReducer.tsx  labelerReducer.tsx
src/streamlit_annotation_tools/frontend/src/types/: highlightTypes.ts  labelerTypes.ts
src/streamlit_annotation_tools/frontend/src/utils/: useNullableRenderData.ts
