[tool.poetry]
name = "st-text-annotator"
version = "0.3.4"
description = "Component for annotating text for NLP resolution"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
authors = ["Robin Marquet <robin.marquet@epitech.eu>"]
license = "MIT"
readme = "README.md"
keywords = ["streamlit", "text", "annotation", "nlp"]
include = ["./src/st_text_annotator/frontend/build/**/*"]
exclude = ["**/node_modules/**/*"]
packages = [{include = "st_text_annotator", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0.0"
streamlit = "1.21.0"

[tool.poetry.group.dev.dependencies]
alfred-cli = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

